<resources>
    <string name="app_name">Movies</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="full_name">Full Name</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="register">Register</string>
    <string name="set_photo">Set Photo</string>
    <string name="profile_image">Profile Image</string>
    <string name="password">Password</string>
    <string name="re_type_password">Re-Type Password</string>
    <string name="name">Name</string>
    <string name="moviePoster">MoviePoster</string>
</resources>